<resources>
    <string name="test_app_json">Messenger</string>
    <string name="common_offline_notice_title">下线通知</string>
    <string name="common_offline_notice_msg">您的帐号已在其他手机上登录，如非本人操作，则密码可能已泄露，请尽快修改密码。</string>
    <string name="common_offline_retry">重新登录</string>
    <string name="common_offline_exit">退出</string>
    <string name="common_id_past_title">提示</string>
    <string name="common_id_past_msg">登录已失效，请重新登录</string>
    <string name="common_copyToClipboard">已复制</string>
    <string name="commom_cannot_copyToClipboard">不可复制</string>
    <string-array name="common_weekDays">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
    <string name="notification_title">会话消息</string>
    <string name="notification_content">来自%1$s个联系人的%2$s条消息！</string>
    <string name="chatHeader_previous">消息</string>
    <string name="chatFooter_send">发送</string>
    <string name="allContact_listItem_online">[在线]</string>
    <string name="allContact_listItem_offline">[离线]</string>
    <string name="gpsAlert">GPS提示</string>
    <string name="gpsAlertContent">GPS未开启，建议开启提高定位精确度</string>
    <string name="gpsAlertGoSettings">设置</string>
    <string name="gpsStartUp">Messenger正在运行中</string>
    <string name="gpsSucceedUpload">定位功能已正常启用</string>
    <string name="gpsUploadFailed">定位功能异常</string>
    <string name="main_tabitem_home">主页</string>
    <string name="main_tabitem_organization">联系人</string>
    <string name="main_tabitem_notice">通知</string>
    <string name="main_tabitem_setting">设置</string>
    <string name="main_tabitem_session">会话</string>
    <string name="main_99plus">99+</string>
    <string name="title_activity_main">主页</string>
    <string name="splash_logo">依能科技</string>
    <string name="org_search">搜索</string>
    <string name="app_search">搜索应用</string>
    <string name="main_darkMode">夜间模式</string>
    <string name="main_normalMode">白天模式</string>
    <string name="main_mySettings">我的设置</string>
    <string name="main_downloadedFiles">已下载文件</string>
    <string name="main_logout">退出登录</string>
    <string name="main_exit">退出</string>
    <string name="main_exitConfirmMsg">确定要退出？</string>
    <string name="main_pressAgainBackToDesktop">再按一次返回桌面</string>
    <string name="main_confirm">确定</string>
    <string name="main_cancel">取消</string>
    <string name="main_helpAndFeedback">帮助反馈</string>
    <string name="main_session">消息</string>
    <string name="main_contact">联系人</string>
    <string name="main_app">应用</string>
    <string name="main_my">我</string>
    <string name="main_org">组织机构</string>
    <string name="main_discussion">讨论组</string>
    <string name="main_group">群</string>
    <string name="main_department">部门</string>
    <string name="main_class">班级</string>
    <string name="main_teacher">教职工</string>
    <string name="main_student">学生</string>
    <string name="main_badNetwork">网络异常，请检查网络设置</string>
    <string name="main_anotherLogin">已经在其它设备上线！</string>
    <string name="main_server_shutdown">无法连接服务器,请刷新重试.</string>
    <string name="main_alreadyOffline">已经下线！</string>
    <string name="main_event_delete">删除</string>
    <string name="main_event_noneChecked">没有要删除的通知</string>
    <string name="main_event_CheckedDeleted">已删除%1$d条通知</string>
    <string name="main_event_todo">OA申请审批</string>
    <string name="main_event_notice">通知</string>
    <string name="main_event_my_todo">待审批</string>
    <string name="main_event_my_send_request">发起申请</string>
    <string name="main_event_my_demand">我的申请</string>
    <string name="event_demand_detail_loading">获取中...</string>
    <string name="event_demand_detail_load_failed">获取失败,请重试！</string>
    <string name="event_demand_review_curperson">当前审批人:%1$s</string>
    <string name="event_demand_review_preperson">上一审批人:%1$s</string>
    <string name="event_demand_review_reviewTime">申请时间:%1$s</string>
    <string name="event_demand_review_opinion">%1$s</string>
    <string name="main_event_my_done">已处理</string>
    <string name="event_done_my_opinion">我的审批意见:%1$s</string>
    <string name="event_done_my_reviewTime">我的审批时间:%1$s</string>
    <string name="event_done_request_time">申请时间:%1$s</string>
    <string name="event_done_back">返回修改</string>
    <string name="event_done_refuse">驳回</string>
    <string name="event_done_over">已结束</string>
    <string name="event_done_checking">审批中</string>
    <string name="main_event_newTag">new&#160;&#160;%1$s</string>
    <string-array name="main_eventTabTitle">
        <item>@string/main_event_my_todo</item>
        <item>@string/main_event_my_send_request</item>
        <item>@string/main_event_my_demand</item>
        <item>@string/main_event_my_done</item>
    </string-array>
    <string name="main_eventCheckAll">全选</string>
    <string name="main_eventNoticeEmpty">没有通知消息</string>
    <string name="main_eventNoticeEmptyNetDown">网络异常，请检查网络设置</string>
    <string name="main_eventNoticeEmptyTry">点击重试</string>
    <string name="main_eventTodoCannotBeOpen">还没有待办事件</string>
    <string name="main_eventTodoCheckNow">立即处理</string>
    <string name="main_eventTodoCheckToast">只能电脑上审批</string>
    <string name="main_eventDomendCheckToast">只能电脑上修改</string>
    <string name="main_eventDoneCheckToast">只能电脑上查看</string>
    <string name="main_eventNoticeCannotBeOpen">暂时无法访问事件详情</string>
    <string name="main_eventWebLoadingFailed">事件详情加载失败，请检查网络</string>
    <string-array name="main_myapps_title">
        <item>一卡通</item>
        <item>我的课表</item>
        <item>我的成绩</item>
        <item>学校微网站</item>
        <item>在线考试</item>
        <item>在线学习</item>
        <item>在线办公</item>
        <item>在线评教</item>
        <item>实习报告</item>
    </string-array>
    <string name="main_myapps_currentWeek">当前周</string>
    <string name="main_myapps_currentWeek_content">%1$s / %2$s</string>
    <string name="main_myapps_currentWeek_content_def">--/--</string>
    <string name="main_myapps_payCardBalance">一卡通余额 (元)</string>
    <string name="main_myapps_payCardBalance_def">0.00</string>
    <string name="main_myapps_loadingFailed">加载失败，单击重试！</string>
    <string name="contactGroupOrg_departmentMemberCount">(%1$d)</string>
    <string name="contactChildOrg_member">成员</string>
    <string name="contactChildOrg_department">部门</string>
    <string name="contactChildOrg_group">群组</string>
    <string name="contactChildOrg_discussionGroup">讨论组</string>
    <string name="contactChildOrg_previous">返回</string>
    <string name="contactChildOrg_jumpToMyOrg">跳转到我的机构</string>
    <string name="contactChildOrg_currentPath">当前路径</string>
    <string name="login_title">掌上YNedut</string>
    <string name="login_bttext">登录</string>
    <string name="login_evtext_username">帐号</string>
    <string name="login_evtext_passowrd">密码</string>
    <string name="login_evtext_phonenum">手机号码</string>
    <string name="login_evtext_verification">短信动态码</string>
    <string name="login_evtext_serviceaddress">服务器地址</string>
    <string name="login_tvtext_showserviceaddress">显示服务器地址</string>
    <string name="login_tvtext_hidserviceaddress">隐藏服务器地址</string>
    <string name="login_errortext_emptyusername">用户名不能为空</string>
    <string name="login_errortext_emptypassowrd">密码不能为空</string>
    <string name="login_errortext_emptyserviceaddress">登录地址不能为空</string>
    <string name="login_errortext_emptyphone">未输入手机号码</string>
    <string name="login_errortext_emptyphone_check">请输入正确的手机号码</string>
    <string name="login_errortext_emptyverification">动态码不能为空</string>
    <string name="login_back">返回重新登录</string>
    <string name="login_errortext_jsondata">数据解析出错</string>
    <string name="login_errortext_neterror">网络连接出错</string>
    <string name="login_errorformat_serviceaddress">登录地址格式不正确</string>
    <string name="login_confirmDeleteAccount">确定要删除此帐号?</string>
    <string name="login_deleteOnlyAccount">仅删除帐号</string>
    <string name="login_deleteAccountWithData">删除帐号和本地记录</string>
    <string name="login_username_password_error">帐号或密码错误</string>
    <string name="login_loginNow">正在登录……</string>
    <string name="login_networkDisconnected">网络连接已断开</string>
    <string name="login_or">或</string>
    <string name="login_account_type">帐号密码登录</string>
    <string name="login_phonenum_type">短信动态码登录</string>
    <string name="login_get_verification">获取动态码</string>
    <string name="login_verification_error">动态码错误，请重新输入</string>
    <string name="login_img_verification_input">请输入图片验证码</string>
    <string name="login_img_verification_error">验证码输入错误，请重新输入</string>
    <string name="please_input_server_address2">请输入登录地址</string>
    <string name="please_input_server_address">请设置登录地址：</string>
    <string name="server_address_rule">地址必须以http://或https://开头</string>
    <string name="server_help">如何获取登录地址</string>
    <string name="phone_help">收不到动态码?</string>
    <string name="groupInfo_previous">返回</string>
    <string name="groupInfo_title">群资料</string>
    <string name="disInfo_previous">返回</string>
    <string name="disInfo_title">聊天信息</string>
    <string name="disInfo_discussName">讨论组名称</string>
    <string name="disInfo_discussMembers">讨论组成员</string>
    <string name="disInfo_discussAddMembers">添加新组员</string>
    <string name="disInfo_chatMsgSearch">查找聊天记录</string>
    <string name="disInfo_quitDiscuss">退出讨论组</string>
    <string name="disGroupRename_previous">返回</string>
    <string name="disGroupRename_done">完成</string>
    <string name="disGroupRename_title">聊天信息</string>
    <string name="disGroupRename_textCountLimit">%1$d/40</string>
    <string name="groupInfo_filesShared">群共享</string>
    <string name="groupInfo_members">群成员</string>
    <string name="groupInfo_addNewMembers">邀请新成员</string>
    <string name="server_connection_fail">连接失败，请检查登录地址是否正确</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="scan">查看</string>
    <string name="tasks_manager_demo_title">任务管理器案例</string>
    <string name="tasks_manager_demo_name" formatted="false">任务: %d</string>
    <string name="tasks_manager_demo_status_loading">状态: 准备中...</string>
    <string name="tasks_manager_demo_status_pending">状态: 队列中</string>
    <string name="tasks_manager_demo_status_started">状态: 开始下载</string>
    <string name="tasks_manager_demo_status_connected">状态: 已连接上</string>
    <string name="personinfo_pop_cancle_pop">取消</string>
    <string name="setting_title">我的设置</string>
    <string name="setting_previous">返回</string>
    <string name="setting_msgNotify">消息提醒</string>
    <string name="setting_viewSetting">浏览设置</string>
    <string name="setting_additionalFunction">辅助功能</string>
    <string name="setting_about">关于 </string>
    <string name="setting_logout">退出提示</string>
    <string name="distractionFreeSetting_title">免打扰设置</string>
    <string name="distractionFreeSetting_previous">返回</string>
    <string name="distractionFreeSetting_beginTime">免打扰开始时间</string>
    <string name="distractionFreeSetting_beginTimeDisplay">%1$s 时  %2$s 分</string>
    <string name="distractionFreeSetting_endTime">免打扰结束时间</string>
    <string name="distractionFreeSetting_endTimeDisplay">%1$s 时  %2$s 分</string>
    <string name="additionalFunction_title">辅助功能</string>
    <string name="additionalFunction_previous">返回</string>
    <string name="additionalFunction_clearChatMsgList">清空消息列表</string>
    <string name="additionalFunction_clearCache">清除缓存</string>
    <string name="additionalFunction_deleteConfirm">清空消息列表后，聊天记录依然保留，确定要清空消息列表？</string>
    <string name="additionalFunction_confirmNo">取消</string>
    <string name="filePicker_title">发送文件</string>
    <string name="filePicker_cancel">取消</string>
    <string name="filePicker_send">发送 (%1$d/%2$d)</string>
    <string name="gallery_title">选择照片</string>
    <string name="gallery_album">相册</string>
    <string name="gallery_otherFolders">文件夹</string>
    <string name="gallery_preview">预览</string>
    <string name="gallery_done">完成</string>
</resources>