<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_gray"
    android:orientation="vertical"
    tools:context=".activity.settings.DistractionFreeSettingActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/actionBar_bg"
        android:padding="@dimen/common_actionbar_padding" >

        <TextView
            android:id="@+id/distractionFreeSetting_imgb_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/previous"
            android:drawablePadding="@dimen/common_actionbar_backKey_drawableLeftPadding"
            android:gravity="center_vertical"
            android:text="@string/distractionFreeSetting_previous"
            android:textColor="@color/white"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:textSize="@dimen/common_contact_actionbar_backKey_textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/distractionFreeSetting_title"
            android:textColor="@color/white"
            android:textSize="@dimen/common_actionbar_title_textSize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_topArea_verMargin"
        android:background="@color/white"
        android:divider="?android:attr/listDivider"
        android:orientation="vertical"
        android:showDividers="middle" >

        <RelativeLayout
            android:id="@+id/distractionFreeSetting_rel_beginTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_listItem_padding" >

            <TextView
                android:id="@+id/distractionFreeSetting_txt_beginTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/distractionFreeSetting_beginTimeDisplay"
                android:textSize="@dimen/common_listItem_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distractionFreeSetting_beginTime"
                android:textSize="@dimen/common_listItem_textSize" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/distractionFreeSetting_rel_endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_listItem_padding" >

            <TextView
                android:id="@+id/distractionFreeSetting_txt_endTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/distractionFreeSetting_endTimeDisplay"
                android:textSize="@dimen/common_listItem_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distractionFreeSetting_endTime"
                android:textSize="@dimen/common_listItem_textSize" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>