<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/personinfo_phone_pop_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_main_menu_popwindow_help"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickListener"
            android:text="@string/main_helpAndFeedback"
            android:textColor="@color/common_blue"
            android:textSize="16sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.5"
            android:background="@color/devide_line" />

        <TextView
            android:id="@+id/tv_main_menu_popwindow_exit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickListener"
            android:text="@string/main_exit"
            android:textColor="@color/common_blue"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.5"
            android:background="@color/devide_line" />

        <TextView
            android:id="@+id/tv_main_menu_popwindow_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickListener"
            android:text="@string/personinfo_pop_cancle_pop"
            android:textColor="@color/common_blue"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>